@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Tentative fix for bug #2094038: Monk Confusion...
+ server/gods.c: don't try to update the 'no weapon' flag if the player is
+ forbidden weapons, that messes with things.
+Nicolas Weeger 2008-11-10
+
 Fix for bug #2081472: short int encoding for food value in payment altars.
 (merged from trunk)
  include/living.h object.h: make food and last_eat sint32 so no overflow.
